--- a/registrof.html
+++ b/registrof.html
@@ -2,225 +2,169 @@
 <html lang="pt-br">
 <head>
 <meta charset="UTF-8">
-<title>Mural Oficial de Parcerias</title>
+<title>Deboxe Customs - Mural de Parcerias</title>
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
-<link href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;600;700&display=swap" rel="stylesheet">
+<link rel="icon" href="https://imgur.com/Nw9g2Q2.png">
+<link href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;600;700;800&display=swap" rel="stylesheet">
+<link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet">
 
 <style>
-body {
-    margin: 0;
-    font-family: 'Inter', sans-serif;
-    background: linear-gradient(135deg, #020617, #0f172a);
-    color: #fff;
-    display: flex;
-    justify-content: center;
+:root{
+  --vermelho:#e10600;
+  --dourado:#ffcc00;
+  --bg:#f7f9fb;
 }
 
-.container {
-    width: 100%;
-    max-width: 950px;
-    margin: 30px;
-    background: rgba(2,6,23,.96);
-    border-radius: 18px;
-    padding: 30px;
-    box-shadow: 0 0 60px rgba(0,0,0,.7);
+body{
+  font-family:'Inter',sans-serif;
+  background:var(--bg);
+  color:#111;
+  margin:0;
+  padding-top:90px;
 }
 
-.header {
-    text-align: center;
-    margin-bottom: 25px;
+/* ===== TOPO ===== */
+.topbar{
+  background:linear-gradient(90deg,#000,#1a0000,#000);
+  border-bottom:3px solid var(--vermelho);
+  padding:14px 0;
+  position:fixed;
+  top:0;
+  width:100%;
+  z-index:1000;
 }
 
-.header h1 {
-    margin: 0;
-    font-size: 30px;
+.logo{
+  font-weight:800;
+  font-size:1.3rem;
+  background:linear-gradient(135deg,var(--vermelho),var(--dourado));
+  -webkit-background-clip:text;
+  -webkit-text-fill-color:transparent;
 }
 
-.header p {
-    opacity: .8;
-    margin-top: 6px;
+/* ===== CARD ===== */
+.card{
+  border-radius:18px;
+  box-shadow:0 20px 40px rgba(0,0,0,.12);
 }
 
-.controls {
-    display: flex;
-    gap: 10px;
-    margin-bottom: 18px;
+.card-header{
+  background:linear-gradient(135deg,var(--vermelho),var(--dourado));
+  color:#000;
+  font-weight:800;
+  text-align:center;
+  border-radius:18px 18px 0 0;
 }
 
-.controls input,
-.controls select {
-    flex: 1;
-    padding: 12px;
-    background: #020617;
-    border: 1px solid #334155;
-    border-radius: 10px;
-    color: #fff;
+/* ===== CONTROLES ===== */
+input, select{
+  border-radius:12px!important;
+  border:1px solid #ccc!important;
 }
 
-table {
-    width: 100%;
-    border-collapse: collapse;
-    border-radius: 14px;
-    overflow: hidden;
+/* ===== TABELA ===== */
+table{
+  border-radius:14px;
+  overflow:hidden;
 }
 
-th, td {
-    padding: 14px;
-    text-align: center;
+th{
+  background:#f1f1f1;
+  font-weight:700;
 }
 
-th {
-    background: #020617;
-    border-bottom: 1px solid #334155;
+.badge-oficial{
+  background:linear-gradient(135deg,var(--vermelho),var(--dourado));
+  color:#000;
+  padding:6px 14px;
+  border-radius:20px;
+  font-weight:700;
 }
 
-tr:nth-child(even) {
-    background: rgba(255,255,255,.03);
+.del{
+  background:#dc2626;
+  border:none;
+  color:#fff;
+  padding:6px 10px;
+  border-radius:8px;
+  cursor:pointer;
 }
 
-.badge {
-    padding: 6px 16px;
-    border-radius: 20px;
-    font-size: 13px;
-    font-weight: 600;
-}
-
-.OFICIAL {
-    background: linear-gradient(135deg, #16a34a, #22c55e);
-    box-shadow: 0 0 12px rgba(34,197,94,.6);
-}
-
-.del {
-    background: #dc2626;
-    border: none;
-    padding: 6px 10px;
-    border-radius: 8px;
-    cursor: pointer;
-    color: #fff;
-}
-
-.admin-toggle {
-    margin-top: 25px;
-    text-align: center;
-}
-
-.admin-toggle button {
-    background: transparent;
-    border: 1px dashed #475569;
-    color: #94a3b8;
-    padding: 9px 18px;
-    border-radius: 12px;
-    cursor: pointer;
-}
-
-.admin {
-    display: none;
-    margin-top: 30px;
-    border-top: 1px solid #334155;
-    padding-top: 25px;
-}
-
-.admin input {
-    width: 100%;
-    padding: 12px;
-    margin-top: 10px;
-    background: #020617;
-    border: 1px solid #334155;
-    border-radius: 10px;
-    color: #fff;
-}
-
-.admin button {
-    margin-top: 14px;
-    width: 100%;
-    background: #2563eb;
-    color: #fff;
-    padding: 12px;
-    border-radius: 10px;
-    border: none;
-    font-weight: bold;
-    cursor: pointer;
-}
-
-.beneficios {
-    margin-top: 40px;
-    padding: 24px;
-    border: 1px solid #334155;
-    border-radius: 16px;
-    background: rgba(15,23,42,.6);
-}
-
-.beneficios h3 {
-    margin-top: 0;
-    color: #38bdf8;
-}
-
-.beneficios ul {
-    list-style: none;
-    padding: 0;
-}
-
-.beneficios li {
-    margin-bottom: 8px;
-}
-
-.beneficios .obs {
-    font-size: 13px;
-    opacity: .85;
+/* ===== ADMIN ===== */
+.admin{
+  display:none;
+  margin-top:30px;
+  border-top:2px dashed #ccc;
+  padding-top:25px;
 }
 </style>
 </head>
 
 <body>
-<div class="container">
 
-<div class="header">
-    <h1>📋 Mural Oficial de Parcerias</h1>
-    <p>Lista pública de integrantes e parcerias ativas</p>
+<header class="topbar">
+  <div class="container d-flex align-items-center gap-3">
+    <img src="https://imgur.com/Nw9g2Q2.png" height="55">
+    <div class="logo">Deboxe Customs</div>
+  </div>
+</header>
+
+<div class="container mt-4">
+
+<div class="card">
+<div class="card-header">
+📋 Mural Oficial de Parcerias
 </div>
 
-<div class="controls">
-    <input id="busca" placeholder="🔍 Buscar nome" oninput="render()">
-    <select id="filtro" onchange="render()">
-        <option value="">Todas</option>
-        <option value="OFICIAL">Parcerias Oficiais</option>
+<div class="card-body">
+
+<div class="row mb-3">
+  <div class="col-md-6">
+    <input id="busca" class="form-control" placeholder="🔍 Buscar nome" oninput="render()">
+  </div>
+  <div class="col-md-6">
+    <select id="filtro" class="form-control" onchange="render()">
+      <option value="">Todas</option>
+      <option value="OFICIAL">Parcerias Oficiais</option>
     </select>
+  </div>
 </div>
 
-<table>
+<div class="table-responsive">
+<table class="table table-bordered text-center">
 <thead>
 <tr>
-    <th>Nome</th>
-    <th>Grupo</th>
-    <th></th>
+  <th>Nome</th>
+  <th>Grupo</th>
+  <th>Ação</th>
 </tr>
 </thead>
 <tbody id="lista"></tbody>
 </table>
+</div>
 
-<div class="admin-toggle">
-    <button onclick="toggleAdmin()">Acesso Administrativo</button>
+<div class="text-center mt-3">
+<button class="btn btn-outline-dark" onclick="toggleAdmin()">Acesso Administrativo</button>
 </div>
 
 <div class="admin" id="admin">
-    <h3>Área Administrativa</h3>
-    <input type="password" id="senha" placeholder="Senha admin">
-    <input id="nome" placeholder="Nome do integrante">
-    <input id="grupo" placeholder="Grupo (PM, PRF, BOPE, etc)">
-    <button onclick="adicionar()">Adicionar ao mural</button>
+<h5 class="mt-4">Área Administrativa</h5>
+<input type="password" id="senha" class="form-control mb-2" placeholder="Senha admin">
+<input id="nome" class="form-control mb-2" placeholder="Nome do integrante">
+<input id="grupo" class="form-control mb-2" placeholder="Grupo (PM, PRF, BOPE...)">
+<button class="btn btn-danger w-100" onclick="adicionar()">Adicionar ao mural</button>
 </div>
 
-<div class="beneficios">
-    <h3>🎁 Benefícios para Parceiros</h3>
-    <ul>
-        <li>🔧 Reparo totalmente grátis</li>
-        <li>💸 10% de desconto na tunagem</li>
-    </ul>
-    <p class="obs">
-        ℹ️ Para receber os benefícios, é necessário fazer parte do grupo parceiro e estar na lista.<br>
-        ⚠️ Caso não esteja na lista, mas esteja fardado com a roupa oficial do grupo, os benefícios poderão ser concedidos.
-    </p>
+<hr class="mt-4">
+
+<h5>🎁 Benefícios para Parceiros</h5>
+<ul>
+<li>🔧 Reparo totalmente grátis</li>
+<li>💸 10% de desconto na tunagem</li>
+</ul>
+
+</div>
 </div>
 
 </div>
@@ -245,74 +189,61 @@ const SENHA = "admin123";
 let dados = [];
 let admin = false;
 
-async function carregar() {
-    dados = [];
-    const snap = await getDocs(collection(db, "parcerias"));
-    snap.forEach(d => dados.push({ id: d.id, ...d.data() }));
-    render();
+async function carregar(){
+  dados=[];
+  const snap = await getDocs(collection(db,"parcerias"));
+  snap.forEach(d=>dados.push({id:d.id,...d.data()}));
+  render();
 }
 
-window.render = function () {
-    const lista = document.getElementById("lista");
-    lista.innerHTML = "";
+window.render = function(){
+  const lista=document.getElementById("lista");
+  lista.innerHTML="";
+  const busca=document.getElementById("busca").value.toLowerCase();
+  const filtro=document.getElementById("filtro").value;
 
-    const busca = document.getElementById("busca").value.toLowerCase();
-    const filtro = document.getElementById("filtro").value;
+  dados
+  .filter(d=>d.nome.toLowerCase().includes(busca))
+  .filter(d=>filtro==="OFICIAL"?d.oficial:true)
+  .forEach(d=>{
+    lista.innerHTML+=`
+    <tr>
+      <td>${d.nome}</td>
+      <td><span class="badge-oficial">${d.grupo}</span></td>
+      <td>${admin?`<button class="del" onclick="remover('${d.id}')">🗑️</button>`:""}</td>
+    </tr>`;
+  });
+}
 
-    dados
-    .filter(d => d.nome.toLowerCase().includes(busca))
-    .filter(d => filtro === "OFICIAL" ? d.oficial === true : true)
-    .forEach(d => {
-        lista.innerHTML += `
-        <tr>
-            <td>${d.nome}</td>
-            <td><span class="badge OFICIAL">${d.grupo}</span></td>
-            <td>${admin ? `<button class="del" onclick="remover('${d.id}')">🗑️</button>` : ""}</td>
-        </tr>`;
-    });
-};
+window.toggleAdmin=function(){
+  const senha=prompt("Senha admin:");
+  if(senha!==SENHA) return alert("Senha incorreta");
+  admin=true;
+  document.getElementById("admin").style.display="block";
+  render();
+}
 
-window.toggleAdmin = function () {
-    const senha = prompt("Senha admin:");
-    if (senha !== SENHA) return alert("Senha incorreta");
-    admin = true;
-    document.getElementById("admin").style.display = "block";
-    render();
-};
+window.adicionar=async function(){
+  if(senha.value!==SENHA) return alert("Senha incorreta");
+  if(!nome.value||!grupo.value) return alert("Preencha tudo");
 
-window.adicionar = async function () {
-    const nome = nomeInput.value.trim();
-    const grupo = grupoInput.value.trim();
-    const senha = senhaInput.value;
+  await addDoc(collection(db,"parcerias"),{
+    nome:nome.value,
+    grupo:grupo.value,
+    oficial:true
+  });
 
-    if (senha !== SENHA) return alert("Senha incorreta");
-    if (!nome || !grupo) return alert("Preencha tudo");
+  nome.value="";
+  grupo.value="";
+  senha.value="";
+  carregar();
+}
 
-    if (dados.some(d => d.nome.toLowerCase() === nome.toLowerCase())) {
-        return alert("Nome duplicado");
-    }
-
-    await addDoc(collection(db, "parcerias"), {
-        nome,
-        grupo,
-        oficial: true
-    });
-
-    nomeInput.value = "";
-    grupoInput.value = "";
-    senhaInput.value = "";
-    carregar();
-};
-
-window.remover = async function (id) {
-    if (!confirm("Remover este nome?")) return;
-    await deleteDoc(doc(db, "parcerias", id));
-    carregar();
-};
-
-const nomeInput = document.getElementById("nome");
-const grupoInput = document.getElementById("grupo");
-const senhaInput = document.getElementById("senha");
+window.remover=async function(id){
+  if(!confirm("Remover este nome?")) return;
+  await deleteDoc(doc(db,"parcerias",id));
+  carregar();
+}
 
 carregar();
 </script>
