--- a/registrof.html
+++ b/registrof.html
@@ -8,6 +8,7 @@
 <link rel="icon" href="https://imgur.com/Nw9g2Q2.png">
 <link href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;600;700;800&display=swap" rel="stylesheet">
 <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet">
+<script src="https://kit.fontawesome.com/a2d9b1d7a1.js" crossorigin="anonymous"></script>
 
 <style>
 :root{
@@ -22,9 +23,10 @@ body{
   color:#111;
   margin:0;
   padding-top:90px;
+  user-select:none;
 }
 
-/* ===== TOPO ===== */
+/* ===== MENU ===== */
 .topbar{
   background:linear-gradient(90deg,#000,#1a0000,#000);
   border-bottom:3px solid var(--vermelho);
@@ -43,6 +45,36 @@ body{
   -webkit-text-fill-color:transparent;
 }
 
+.nav-links a{
+  color:#fff;
+  margin-left:20px;
+  font-weight:600;
+  text-decoration:none;
+  position:relative;
+}
+
+.nav-links a::after{
+  content:"";
+  position:absolute;
+  bottom:-6px;
+  left:0;
+  width:0;
+  height:2px;
+  background:linear-gradient(90deg,var(--vermelho),var(--dourado));
+  transition:.3s;
+}
+.nav-links a:hover::after{width:100%}
+
+.discord-btn{
+  margin-left:25px;
+  padding:8px 16px;
+  border-radius:14px;
+  font-weight:700;
+  background:linear-gradient(135deg,var(--vermelho),var(--dourado));
+  color:#000;
+  text-decoration:none;
+}
+
 /* ===== CARD ===== */
 .card{
   border-radius:18px;
@@ -55,23 +87,6 @@ body{
   font-weight:800;
   text-align:center;
   border-radius:18px 18px 0 0;
-}
-
-/* ===== CONTROLES ===== */
-input, select{
-  border-radius:12px!important;
-  border:1px solid #ccc!important;
-}
-
-/* ===== TABELA ===== */
-table{
-  border-radius:14px;
-  overflow:hidden;
-}
-
-th{
-  background:#f1f1f1;
-  font-weight:700;
 }
 
 .badge-oficial{
@@ -91,31 +106,52 @@ th{
   cursor:pointer;
 }
 
-/* ===== ADMIN ===== */
 .admin{
   display:none;
   margin-top:30px;
   border-top:2px dashed #ccc;
   padding-top:25px;
 }
+
+.beneficios{
+  margin-top:35px;
+  padding:24px;
+  border:1px solid #ccc;
+  border-radius:16px;
+  background:#fafafa;
+}
+
+.beneficios .obs{
+  font-size:14px;
+  color:#444;
+}
 </style>
 </head>
 
 <body>
 
+<!-- MENU -->
 <header class="topbar">
-  <div class="container d-flex align-items-center gap-3">
-    <img src="https://imgur.com/Nw9g2Q2.png" height="55">
-    <div class="logo">Deboxe Customs</div>
+  <div class="container d-flex justify-content-between align-items-center">
+    <div class="d-flex align-items-center gap-3">
+      <img src="https://imgur.com/Nw9g2Q2.png" height="55">
+      <div class="logo">Deboxe Customs</div>
+    </div>
+    <nav class="d-none d-md-flex align-items-center nav-links">
+      <a href="index.html">Início</a>
+      <a href="tabela.html">Preços</a>
+      <a href="funcionarios.html">Funcionários</a>
+      <a href="https://discord.gg/Z72tjMRmUX" class="discord-btn">
+        <i class="fa-brands fa-discord"></i> Discord
+      </a>
+    </nav>
   </div>
 </header>
 
 <div class="container mt-4">
 
 <div class="card">
-<div class="card-header">
-📋 Mural Oficial de Parcerias
-</div>
+<div class="card-header">📋 Mural Oficial de Parcerias</div>
 
 <div class="card-body">
 
@@ -156,19 +192,23 @@ th{
 <button class="btn btn-danger w-100" onclick="adicionar()">Adicionar ao mural</button>
 </div>
 
-<hr class="mt-4">
-
+<div class="beneficios">
 <h5>🎁 Benefícios para Parceiros</h5>
 <ul>
 <li>🔧 Reparo totalmente grátis</li>
 <li>💸 10% de desconto na tunagem</li>
 </ul>
+<p class="obs">
+ℹ️ Para receber os benefícios, é necessário fazer parte do grupo parceiro e estar na lista.<br>
+⚠️ Caso não esteja na lista, mas esteja fardado com a roupa oficial do grupo, os benefícios poderão ser concedidos.
+</p>
+</div>
 
 </div>
 </div>
-
 </div>
 
+<!-- ===== FIREBASE ===== -->
 <script type="module">
 import { initializeApp } from "https://www.gstatic.com/firebasejs/10.7.1/firebase-app.js";
 import { getFirestore, collection, addDoc, getDocs, deleteDoc, doc } from "https://www.gstatic.com/firebasejs/10.7.1/firebase-firestore.js";
@@ -185,26 +225,22 @@ const firebaseConfig = {
 const app = initializeApp(firebaseConfig);
 const db = getFirestore(app);
 
-const SENHA = "admin123";
-let dados = [];
-let admin = false;
+const SENHA="admin123";
+let dados=[],admin=false;
 
 async function carregar(){
   dados=[];
-  const snap = await getDocs(collection(db,"parcerias"));
+  const snap=await getDocs(collection(db,"parcerias"));
   snap.forEach(d=>dados.push({id:d.id,...d.data()}));
   render();
 }
 
-window.render = function(){
-  const lista=document.getElementById("lista");
+window.render=function(){
   lista.innerHTML="";
-  const busca=document.getElementById("busca").value.toLowerCase();
-  const filtro=document.getElementById("filtro").value;
-
-  dados
-  .filter(d=>d.nome.toLowerCase().includes(busca))
-  .filter(d=>filtro==="OFICIAL"?d.oficial:true)
+  const b=busca.value.toLowerCase();
+  const f=filtro.value;
+  dados.filter(d=>d.nome.toLowerCase().includes(b))
+  .filter(d=>f==="OFICIAL"?d.oficial:true)
   .forEach(d=>{
     lista.innerHTML+=`
     <tr>
@@ -216,36 +252,66 @@ window.render = function(){
 }
 
 window.toggleAdmin=function(){
-  const senha=prompt("Senha admin:");
-  if(senha!==SENHA) return alert("Senha incorreta");
+  if(prompt("Senha admin:")!==SENHA) return alert("Senha incorreta");
   admin=true;
-  document.getElementById("admin").style.display="block";
+  adminDiv.style.display="block";
   render();
 }
 
 window.adicionar=async function(){
-  if(senha.value!==SENHA) return alert("Senha incorreta");
-  if(!nome.value||!grupo.value) return alert("Preencha tudo");
-
-  await addDoc(collection(db,"parcerias"),{
-    nome:nome.value,
-    grupo:grupo.value,
-    oficial:true
-  });
-
-  nome.value="";
-  grupo.value="";
-  senha.value="";
+  if(senha.value!==SENHA||!nome.value||!grupo.value) return alert("Erro");
+  await addDoc(collection(db,"parcerias"),{nome:nome.value,grupo:grupo.value,oficial:true});
+  nome.value=grupo.value=senha.value="";
   carregar();
 }
 
 window.remover=async function(id){
-  if(!confirm("Remover este nome?")) return;
-  await deleteDoc(doc(db,"parcerias",id));
-  carregar();
+  if(confirm("Remover?")){
+    await deleteDoc(doc(db,"parcerias",id));
+    carregar();
+  }
 }
 
+const lista=document.getElementById("lista");
+const busca=document.getElementById("busca");
+const filtro=document.getElementById("filtro");
+const adminDiv=document.getElementById("admin");
+const nome=document.getElementById("nome");
+const grupo=document.getElementById("grupo");
+const senha=document.getElementById("senha");
+
 carregar();
+</script>
+
+<!-- ===== SEGURANÇA ===== -->
+<script>
+document.addEventListener("contextmenu",e=>e.preventDefault());
+document.addEventListener("selectstart",e=>e.preventDefault());
+document.addEventListener("dragstart",e=>e.preventDefault());
+
+document.addEventListener("keydown",e=>{
+  if(
+    e.key==="F12" ||
+    (e.ctrlKey&&e.shiftKey&&["I","J","C","K"].includes(e.key.toUpperCase())) ||
+    (e.ctrlKey&&["U","S","C","V","X","A","P"].includes(e.key.toUpperCase()))
+  ){
+    e.preventDefault(); return false;
+  }
+});
+
+(function(){
+  const d=new Image();
+  Object.defineProperty(d,"id",{get:function(){
+    document.body.innerHTML='<div style="background:black;color:white;height:100vh;display:flex;align-items:center;justify-content:center"><h1>⛔ ACESSO BLOQUEADO</h1></div>';
+    throw new Error();
+  }});
+  setInterval(()=>console.log(d),1000);
+})();
+
+document.querySelectorAll("img").forEach(img=>{
+  img.setAttribute("draggable","false");
+  img.style.pointerEvents="none";
+});
 </script>
 
 </body>
