--- a/parceria.html
+++ b/parceria.html
@@ -225,7 +225,7 @@ const firebaseConfig = {
 const app = initializeApp(firebaseConfig);
 const db = getFirestore(app);
 
-const SENHA="admin123";
+const SENHA="centraldeboxe26oficial";
 let dados=[],admin=false;
 
 async function carregar(){
@@ -315,4 +315,5 @@ document.querySelectorAll("img").forEach(img=>{
 </script>
 
 </body>
+
 </html>
