--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@ body{
   background:linear-gradient(90deg,var(--vermelho),var(--dourado));
   transition:.3s;
 }
-.nav-links a:hover::after{width:100%;}
+.nav-links a:hover{width:100%;}
 .discord-btn{
   margin-left:25px;
   padding:8px 16px;
@@ -103,7 +103,7 @@ body{
   .modal-video iframe{height:240px;}
 }
 
-/* ANIMAÇÃO REGRAS */
+/* ANIMAÇÕES */
 @keyframes glow{
   0%{box-shadow:0 0 15px rgba(225,6,0,.4)}
   50%{box-shadow:0 0 40px rgba(255,204,0,.8)}
@@ -162,7 +162,7 @@ footer{
 </style>
 </head>
 
-<body oncontextmenu="return false">
+<body>
 
 <header class="topbar">
 <div class="container d-flex justify-content-between align-items-center">
@@ -174,14 +174,15 @@ footer{
     <a href="index.html">Início</a>
     <a href="tabela.html">Preços</a>
     <a href="funcionarios.html">Funcionarios</a>
-    <a href="https://discord.gg/Z72tjMRmUX" class="discord-btn"><i class="fa-brands fa-discord"></i> Discord</a>
+    <a href="https://discord.gg/Z72tjMRmUX" class="discord-btn">
+      <i class="fa-brands fa-discord"></i> Discord
+    </a>
   </nav>
 </div>
 </header>
 
 <main class="container my-5">
 
-<!-- CURSOS -->
 <section id="cursos">
 <h2 class="text-center mb-4">Cursos da Mecânica</h2>
 
@@ -237,25 +238,20 @@ footer{
 </div>
 </div>
 
-<!-- REGRAS -->
 <section id="regras" class="cards-animated">
 <div class="card-animated">
   <i class="fa-solid fa-car fa-3x text-danger"></i>
   <h3 class="mt-3">Veículos Restritos</h3>
-  <p>É terminantemente proibido realizar qualquer tipo de modificação
-      em veículos governamentais, viaturas policiais, ambulâncias ou
-      veículos de serviços públicos.</p>
+  <p>É terminantemente proibido realizar modificações em veículos governamentais.</p>
 </div>
 
 <div class="card-animated">
   <i class="fa-solid fa-coins fa-3x text-warning"></i>
   <h3 class="mt-3">Valores da Tabela</h3>
-  <p>Todos os serviços prestados devem seguir rigorosamente a tabela
-      oficial da mecânica. Cobranças indevidas resultarão em punições.</p>
+  <p>Todos os serviços devem seguir rigorosamente a tabela oficial.</p>
 </div>
 </section>
 
-<!-- SOBRE -->
 <section class="about-section">
 <h2 class="text-center mb-4">Sobre Nós</h2>
 <div class="row align-items-center">
@@ -263,53 +259,52 @@ footer{
     <img src="https://imgur.com/Nw9g2Q2.png">
   </div>
   <div class="col-md-6">
-    <p>
-      A <strong>Deboxe Customs</strong> é uma mecânica referência dentro da
-      Central RP, reconhecida pela seriedade, organização e alto padrão
-      de atendimento.
-    </p>
-    <p>
-      Trabalhamos com consertos, tunagem, personalização e manutenção
-      completa de veículos, sempre respeitando as regras da cidade e
-      prezando pelo roleplay de qualidade.
-    </p>
-    <p>
-      Nosso objetivo é entregar um serviço profissional, justo e
-      transparente, garantindo a satisfação dos clientes e o bom
-      funcionamento da economia do servidor.
-    </p>
+    <p><strong>Deboxe Customs</strong> é referência em mecânica na Central RP.</p>
   </div>
 </div>
 </section>
 
 </main>
 
-<!-- FOOTER -->
 <footer class="text-center py-4">
 © <span id="year"></span> Deboxe Customs — Todos os direitos reservados
 </footer>
 
-<!-- SEGURANÇA -->
+<!-- 🔒 PROTEÇÕES -->
 <script>
-document.addEventListener("keydown",e=>{
+document.addEventListener("contextmenu", e => e.preventDefault());
+document.addEventListener("dragstart", e => e.preventDefault());
+
+document.addEventListener("keydown", function(e){
   if(
-    e.key==="F12" ||
-    (e.ctrlKey && e.shiftKey && ["I","J","C"].includes(e.key)) ||
-    (e.ctrlKey && e.key==="U")
-  ) e.preventDefault();
+    e.key === "F12" ||
+    (e.ctrlKey && e.shiftKey && ["I","J","C"].includes(e.key.toUpperCase())) ||
+    (e.ctrlKey && ["u","s","c","v","x","a"].includes(e.key.toLowerCase()))
+  ){
+    e.preventDefault();
+    alert("Ação bloqueada!");
+  }
 });
-document.addEventListener("copy",e=>e.preventDefault());
-document.getElementById("year").textContent=new Date().getFullYear();
+
+// Detectar DevTools
+(function(){
+  const limite = 160;
+  setInterval(() => {
+    if(
+      window.outerWidth - window.innerWidth > limite ||
+      window.outerHeight - window.innerHeight > limite
+    ){
+      document.body.innerHTML = `
+      <div style="background:black;color:red;height:100vh;display:flex;align-items:center;justify-content:center;font-size:22px;">
+        🚫 Acesso bloqueado – DevTools detectado
+      </div>`;
+    }
+  }, 500);
+})();
+
+document.getElementById("year").textContent = new Date().getFullYear();
 </script>
 
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"></script>
 </body>
 </html>
-
-
-
-
-
-
-
-
