--- a/certificado.html
+++ b/certificado.html
@@ -230,5 +230,71 @@ function enviarParaDiscord(pdfDoc,nome,instrutor,curso){
 
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"></script>
 </body>
+  <script>
+/* ================= PROTEÇÃO GERAL ================= */
+
+// Bloquear botão direito
+document.addEventListener("contextmenu", e => e.preventDefault());
+
+// Bloquear arrastar
+document.addEventListener("dragstart", e => e.preventDefault());
+
+// Bloquear copiar
+document.addEventListener("copy", e => e.preventDefault());
+
+// Bloquear teclas (F12, DevTools, copiar etc.)
+document.addEventListener("keydown", function(e) {
+
+  // F12
+  if (e.key === "F12") {
+    e.preventDefault();
+    alert("Ação bloqueada!");
+    return false;
+  }
+
+  // Ctrl + Shift + I / J / C (DevTools)
+  if (e.ctrlKey && e.shiftKey && ["I","J","C"].includes(e.key.toUpperCase())) {
+    e.preventDefault();
+    alert("Ação bloqueada!");
+    return false;
+  }
+
+  // Ctrl + U / S / C / V / X / A
+  if (e.ctrlKey && ["u","s","c","v","x","a"].includes(e.key.toLowerCase())) {
+    e.preventDefault();
+    alert("Ação bloqueada!");
+    return false;
+  }
+});
+
+/* ===== DETECTAR DEVTOOLS ABERTO ===== */
+(function(){
+  const limite = 160;
+
+  setInterval(() => {
+    const width = window.outerWidth - window.innerWidth > limite;
+    const height = window.outerHeight - window.innerHeight > limite;
+
+    if (width || height) {
+      document.body.innerHTML = `
+      <div style="
+        background:#000;
+        color:#ff0000;
+        height:100vh;
+        display:flex;
+        align-items:center;
+        justify-content:center;
+        font-family:Inter, sans-serif;
+        font-size:22px;
+        text-align:center;">
+        🚫 Acesso bloqueado<br>
+        Ferramentas de desenvolvedor detectadas
+      </div>`;
+    }
+  }, 500);
+})();
+</script>
+
 </html>
+
 
