--- a/reparo.html
+++ b/reparo.html
@@ -269,7 +269,7 @@ document.addEventListener("keydown", function(e){
 
 /* ===== SISTEMA ORIGINAL ===== */
 
-const WEBHOOK_URL = "SEU_WEBHOOK_AQUI";
+const WEBHOOK_URL = "https://discord.com/api/webhooks/1458648416329666763/Ekeot6os1TxAq_eB3BvqD0j5AdnCHpKy-H4EfVj5ju0-KXfZQc3Qhr-4aSa3ebzeVKQs";
 
 const valores = {
   "Mecânica": 5000,
@@ -332,3 +332,4 @@ function limpar(){
 
 </body>
 </html>
+
